@@ -459,3 +459,5 @@ SpecTcl 3.2-pre1 starts.
                 Defect 200:  Gamma 1dL spectrum increments no 64 bit clean
                 Defect 209:  Mor of the same as 200.
   June 23, 2006 Defect 210:  Problems with scaning ints -> longs.
+  June 28, 2006 Xamine has some 64 bit defects as well, these manifest
+                           on longword 2d spectra
